--- a/client-app/src/app/app.component.html
+++ b/client-app/src/app/app.component.html
@@ -1,4 +1,7 @@
+<app-alert></app-alert>
 <nav>
-  <a routerLink="/employee" routerLinkActive="active">Users</a>
-  <a routerLink="/employee/create" routerLinkActive="active">New User</a>
+  <li><a routerLink="/employees" routerLinkActive="active">Employees</a></li>
+  <li><a routerLink="/employee/create" routerLinkActive="active">Créer un employees</a></li>
 </nav>
+
+<router-outlet></router-outlet>
