--- a/client-app/src/app/employee/employee-create/employee-create.component.html
+++ b/client-app/src/app/employee/employee-create/employee-create.component.html
@@ -1,3 +1,21 @@
-<p>
-  employee-create works!
-</p>
+<div class="col-md-6">
+  <h2 class="text-center">Ajouter un Employée</h2>
+<form>
+  <div class="form-group">
+    <label for="email">Email address:</label>
+    <input type="email" [(ngModel)]="employee.email" placeholder="Email" name="email" class="form-control" id="email">
+  </div>
+
+  <div class="form-group">
+    <label for="firstName">First Name:</label>
+    <input [(ngModel)]="employee.firstname" placeholder="First Name" name="firstName" class="form-control" id="firstName">
+  </div>
+
+  <div class="form-group">
+    <label for="lastName">Last Name:</label>
+   <input [(ngModel)]="employee.lastname" placeholder="Last name" name="lastName" class="form-control" id="lastName">
+  </div>
+
+  <button class="btn btn-success" (click)="createEmployee()">Create</button>
+</form>
+</div>
